--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,53 @@
+html {
+    background-color: black;
+}
+
 body {
+    font-family: 'Open Sans', 'Roboto', 'Arial',sans-serif;
     margin: 0 auto;
     position: relative;
     height: 700px;
     width: 1000px;
+    background-image: url(/images/stage-background-1000px.png);
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-size: cover;
 }
 
 h1 {
-    text-align: center;
+    position: absolute;
+    color: #fdfdfd;
+    font-size: 3rem;
+    top: 3rem;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0;
+}
+
+.guess-letter-btn,
+.guess-word-btn,
+.spin-btn {
+    height:  50px;
+    width: 175px;
+    font-size: 1rem;
+}
+
+.guess-letter-btn {
+    position: absolute;
+    bottom: 2rem;
+    right: 3rem;
+}
+
+.guess-word-btn {
+    position: absolute;
+    bottom: 7rem;
+    right: 3rem;
+}
+
+.spin-btn {
+    position: absolute;
+    bottom: 2rem;
+    left: 3rem;
 }
