Update styles using Sass

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,2 +1,15 @@
 @use 'mixins' as *;
 @use 'variables' as *;
+
+header {
+
+    h1 {
+        position: absolute;
+        color: $text-color-light;
+        font-size: 3rem;
+        top: 3rem;
+        left: 50%;
+        transform: translate(-50, -50%);
+        margin: auto;
+    }
+}
