--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,54 +1,71 @@
 html {
-    background-color: black;
+  box-sizing: border-box;
+  background-color: black;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 body {
-    font-family: 'Open Sans', 'Roboto', 'Arial',sans-serif;
-    margin: 0 auto;
-    position: relative;
-    height: 700px;
-    width: 1000px;
-    background-image: url(/images/stage-background-1000px.png);
-    background-repeat: no-repeat;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-size: cover;
+  margin: 0;
 }
 
-h1 {
-    position: absolute;
-    color: #fdfdfd;
-    font-size: 3rem;
-    top: 3rem;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    margin: 0;
+body {
+  font-family: "Montserrat", Georgia, Times, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  position: relative;
+  height: 700px;
+  width: 1000px;
+  background-image: url(/images/stage-background-1000px.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 0;
 }
 
-.guess-letter-btn,
-.guess-word-btn,
-.spin-btn {
-    height:  50px;
-    width: 175px;
-    font-size: 1rem;
-    font-weight: 500;
+header h1 {
+  position: absolute;
+  top: 2rem;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fdfdfd;
+  font-size: 3rem;
 }
 
-.guess-letter-btn {
-    position: absolute;
-    bottom: 2rem;
-    right: 3rem;
+main .guess-letter-btn,
+main .guess-word-btn,
+main .spin-btn {
+  height: 50px;
+  width: 175px;
+  font-weight: 500;
+}
+main .guess-letter-btn {
+  position: absolute;
+  bottom: 2rem;
+  right: 3rem;
+}
+main .guess-word-btn {
+  position: absolute;
+  bottom: 7rem;
+  right: 3rem;
+}
+main .spin-btn {
+  position: absolute;
+  bottom: 2rem;
+  left: 3rem;
 }
 
-.guess-word-btn {
-    position: absolute;
-    bottom: 7rem;
-    right: 3rem;
-}
-
-.spin-btn {
-    position: absolute;
-    bottom: 2rem;
-    left: 3rem;
-}
+/*# sourceMappingURL=styles.css.map */
