--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -11,4 +11,5 @@ body {
     background-image: url(/images/stage-background-1000px.png);
     background-repeat: no-repeat;
     background-size: cover;
+    padding: 0;
 }
