--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -4,18 +4,14 @@
 
 main {
     
-    #game-container {
-        text-align: center;
-        margin: 1rem
-    }
-
-    #guess-board {
-        margin: 1rem 0;
-        font-size: 1.5rem;
+    #game-board {
+        margin: 1rem;
+        font-size: $font-size;
+        border: 2px solid white;
     }
 
     #player-panel {
-        margin: 1rem 0;
+        margin: 1rem;
     }
 
     #spin-btn,
@@ -23,7 +19,7 @@ main {
     #guess-word-btn {
         margin: 1rem;
         padding: .5rem 1rem;
-        font-size: 1rem;
+        font-size: $font-size;
     }
 
     #guess-letter-btn,
@@ -33,13 +29,13 @@ main {
     }
 
 
-    #guess-letter-btn {
+    .guess-word {
         position: absolute;
         right: 2rem;
         bottom: 2rem;
     }
 
-    #guess-word-btn {
+    #letter-guess-btn {
         position: absolute;
         right: 2rem;
         bottom: 7rem;
@@ -50,5 +46,6 @@ main {
         left: 2rem;
         bottom: 2rem;
     }
+
 }
 
