--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,3 +1,9 @@
+// Colors
+$primary1-color: #0000ff;
+$primary2-color: #ffff00;
+$primary3-color: #ff0000;
+
+
 // Text Colors
 $text-color-light: #fdfdfd;
 
@@ -8,3 +14,6 @@ $header-font: 'Roboto', 'Montserrat', Georgia, sans-serif;
 
 // Typographic Defaults
 $font-size: 1.5rem;
+
+// Border
+$border-radius: 1rem;
