--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -5,9 +5,13 @@ main {
 
 // Game board
     #game-board {
-        margin: 1rem;
-        font-size: $font-size;
-        border: 2px solid white;
+        @include text-styles;
+        position: absolute;
+        right: 2rem;
+        bottom: 12rem;
+        padding: 1rem 2rem;
+        background-color: green;
+        border-radius: $border-radius;
     }
 
 // Player Panel 
