--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -8,8 +8,6 @@ body {
     position: relative;
     height: 700px;
     width: 1000px;
-    background-image: url(/images/stage-background-1000px.png);
-    background-repeat: no-repeat;
-    background-size: cover;
     padding: 0;
+    background-color: $background-color;
 }
