Update colors definition

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,8 +1,9 @@
 // Colors
-$primary1-color: #0000ff;
-$primary2-color: #ffff00;
-$primary3-color: #ff0000;
-
+$guess-color: #000070;
+$player-color: #fabf09;
+$spin-color: #96000f;
+$background-color: #2c1269;
+$game-board-color: #00c91c;
 
 // Text Colors
 $text-color-light: #fdfdfd;
