Add innit wheel animation

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -71,5 +71,27 @@ main {
         transform: translate(-50%, -50%);
     }
 
+// Wheel
+
+    #wheel {
+        width: 300px;
+        height: 100%;
+        transform-origin: center;
+        animation: spinWheel 1.5s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
+    }
+
+    .spinning {
+        animation: spinWheel 1.5s (0.175, 0.885, 0.32, 1.275)t forwards;
+    }
+
+    @keyframes spinWheel {
+        to {
+            transform: (360def);
+        }
+        100% {
+            transform: rotate(1080deg);
+        }
+    }
+
 }
 
