Update color styles

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,8 +2,12 @@
 $guess-color: #000070;
 $player-color: #fabf09;
 $spin-color: #96000f;
-$background-color: #2c1269;
-$game-board-color: #00c91c;
+$background-color: #653585;
+$background-color2: #20145c;
+
+//Game board
+$game-board-color: #04b678;
+$game-input-color: #2a2838;
 
 // Text Colors
 $text-color-light: #fdfdfd;
