--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,9 +1,24 @@
 // Colors
 $guess-color: #000070;
 $player-color: #fabf09;
-$spin-color: #96000f;
+$volume-color: #96000f;
 $background-color: #653585;
 $background-color2: #20145c;
+
+
+// Wheel
+$wheel-section-1: #00036d;
+$wheel-section-2: #7502a7;
+$wheel-section-3: #fab904;
+$wheel-section-4: #cf0333;
+$wheel-section-5: #08c029;
+
+//Wheel Border
+$wheel-border-1: #3ab9f7;
+$wheel-border-2: #e327f6;
+$wheel-border-3: #fefe90;
+$wheel-border-4: #eda2a9;
+$wheel-border-5: #b6fb1f;
 
 //Game board
 $game-board-color: #04b678;
