--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -20,8 +20,10 @@ main {
         position: absolute;
         bottom: 2rem;
         left: 2rem;
-        background-color: $player-color;
+        background-color: $wheel-section-5;
+        border: 2px solid $wheel-border-5;
         border-radius: $border-radius;
+        box-shadow: 0px 0px 10px $wheel-border-5;
         width: 200px;
         height: 75px;
 
@@ -47,8 +49,13 @@ main {
         width: 200px;
         height: 50px;
         right: 2rem;
-    }
+        border: 2px solid $wheel-border-1;
 
+        &:hover {
+            box-shadow: 0px 0px 15px $wheel-border-1;
+        }
+    }
+    
     #letter-guess-btn {
         position: absolute;
         bottom: 7rem;
@@ -71,9 +78,10 @@ main {
 
         .spinBtn {
             position: absolute;
+            top: 200px;
             width: 60px;
             height: 60px;
-            background: #fff;
+            background: $wheel-section-3;
             border-radius: 50%;
             z-index: 10;
             display: flex;
@@ -83,9 +91,13 @@ main {
             font-weight: 600;
             color: #333;
             letter-spacing: 0.1em;
-            border: 4px solid rgba(0,0,0,0.75);
+            border: 4px solid $wheel-border-3;
             cursor: pointer;
             user-select: none;
+
+            &:hover {
+                box-shadow: 0px 0px 10px $wheel-border-3;
+            }
 
             &::before {
                 content: '';
@@ -93,23 +105,23 @@ main {
                 top: -28px;
                 width: 20px;
                 height: 30px;
-                background: #fff;
+                background: $wheel-section-3;
                 clip-path: polygon(50% 0%, 1% 100%, 85% 100%);
             }
         } 
 
         .wheel {
             position: absolute;
-            top: 0;
+            top: 2rem;
             left: 0;
             width: 100%;
             height: 100%;
-            background: #333;
+            background: $wheel-section-3;
             border-radius: 50%;
             overflow: hidden;
-            box-shadow: 0 0 0 5px #333,
-                        0 0 0 15px #fff,
-                        0 0 0 18px #111;
+            box-shadow: 0 0 0 5px $wheel-border-3,
+                        0 0 0 15px $wheel-section-3,
+                        0 0 0 18px $wheel-border-3;
             transition: transform 5s ease-in-out;
 
             .number {
@@ -132,7 +144,7 @@ main {
                     font-size: 2rem;
                     font-weight: 700;
                     color: #fff;
-                    text-shadow: 3px 5px 2px rgba(0,0,0,0.15);
+                    text-shadow: 4px 5px 3px rgba(0,0,0,0.50);
                 }
             }
         }
@@ -142,8 +154,15 @@ main {
 
     // Volume Icon
     #volume-icon {
+        position: absolute;
+        top: 2rem;
+        right: 2rem;
         font-size: 30px;
-        color: red;
+        color: $volume-color;
+
+        &:hover {
+            color: $wheel-border-4;
+        }
     }
 
 }
