--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -10,8 +10,11 @@ main {
         right: 2rem;
         bottom: 12rem;
         padding: 1rem 2rem;
-        background-color: $game-board-color;
+        background-color: $player-input-color;
         border-radius: $border-radius;
+        border: 5px solid $game-input-color;
+        box-shadow: inset 0 0 2px 1rem $game-board-color;
+        color: $game-input-color;
     }
 
 // Player Panel 
@@ -23,7 +26,7 @@ main {
         background-color: $wheel-section-5;
         border: 2px solid $wheel-border-5;
         border-radius: $border-radius;
-        box-shadow: 0px 0px 10px $wheel-border-5;
+        box-shadow: 0px 0px 5px $wheel-border-5;
         width: 200px;
         height: 75px;
 
@@ -119,7 +122,7 @@ main {
             background: $wheel-section-3;
             border-radius: 50%;
             overflow: hidden;
-            box-shadow: 0 0 0 5px $wheel-border-3,
+            box-shadow: 0 0 0 5px #333,
                         0 0 0 15px $wheel-section-3,
                         0 0 0 18px $wheel-border-3;
             transition: transform 5s ease-in-out;
