--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -21,8 +21,14 @@ $wheel-border-4: #eda2a9;
 $wheel-border-5: #b6fb1f;
 
 //Game board
-$game-board-color: #04b678;
+$game-board-color: #059072;
 $game-input-color: #2a2838;
+$game-board-border: #92d4ff;
+$game-confirm-color: #15b794;
+
+$confirm-hover:rgb(37, 221, 181);
+
+$player-input-color: #ded3cf;
 
 // Text Colors
 $text-color-light: #fdfdfd;
