--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,33 +12,44 @@
   z-index: 10;
 }
 .modal-container .modal {
-  background: #04b678;
+  background: #059072;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   border: 3px solid #2a2838;
   z-index: 101;
+  text-align: center;
+  justify-content: center;
 }
 .modal-container .modal p {
-  font-size: 20px;
+  font-size: 24px;
+  margin: 0 auto;
+  padding: 1rem;
+  padding-left: 0;
 }
 .modal-container .modal input {
   width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
+  padding: 0.5rem;
   box-sizing: border-box;
   border: 2px solid #2a2838;
+  background-color: #ded3cf;
+  color: #2a2838;
+  font-size: 1rem;
+  font-size: 400;
 }
 .modal-container .modal button {
-  background-color: #4CAF50;
-  color: white;
+  background-color: #15b794;
+  color: #2a2838;
   padding: 10px 15px;
-  border: none;
+  border: 2px solid #2a2838;
   border-radius: 4px;
   cursor: pointer;
+  font-size: 1rem;
+  margin-top: 1rem;
 }
 .modal-container .modal button:hover {
-  background-color: #45a049;
+  background-color: rgb(37, 221, 181);
+  box-shadow: 0 0 10px #15b794;
 }
 
 audio {
@@ -96,7 +107,6 @@ header h1 {
 
 main #game-board {
   color: #fdfdfd;
-  text-shadow: 2px 2px 2px black;
   font-weight: 550;
   font-size: 1.5rem;
   margin: auto;
@@ -104,12 +114,14 @@ main #game-board {
   right: 2rem;
   bottom: 12rem;
   padding: 1rem 2rem;
-  background-color: #04b678;
+  background-color: #ded3cf;
   border-radius: 1rem;
+  border: 5px solid #2a2838;
+  box-shadow: inset 0 0 2px 1rem #059072;
+  color: #2a2838;
 }
 main .player-panel {
   color: #fdfdfd;
-  text-shadow: 2px 2px 2px black;
   font-weight: 550;
   font-size: 1.5rem;
   margin: auto;
@@ -119,7 +131,7 @@ main .player-panel {
   background-color: #08c029;
   border: 2px solid #b6fb1f;
   border-radius: 1rem;
-  box-shadow: 0px 0px 10px #b6fb1f;
+  box-shadow: 0px 0px 5px #b6fb1f;
   width: 200px;
   height: 75px;
 }
@@ -136,7 +148,6 @@ main #player-panel {
 main #letter-guess-btn,
 main #word-guess-btn {
   color: #fdfdfd;
-  text-shadow: 2px 2px 2px black;
   font-weight: 550;
   font-size: 1.5rem;
   margin: auto;
@@ -207,7 +218,7 @@ main .container .wheel {
   background: #fab904;
   border-radius: 50%;
   overflow: hidden;
-  box-shadow: 0 0 0 5px #fefe90, 0 0 0 15px #fab904, 0 0 0 18px #fefe90;
+  box-shadow: 0 0 0 5px #333, 0 0 0 15px #fab904, 0 0 0 18px #fefe90;
   transition: transform 5s ease-in-out;
 }
 main .container .wheel .number {
