--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -28,7 +28,7 @@ $game-confirm-color: #15b794;
 
 $confirm-hover:rgb(37, 221, 181);
 
-$player-input-color: #ded3cf;
+$player-input-color: #d8bbb0;
 
 // Text Colors
 $text-color-light: #fdfdfd;
