--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -3,6 +3,21 @@
 
 main {
 
+//Start 
+
+    .start-panel {
+        background-color: $game-board-color;
+        border: 3px solid $game-input-color;
+        border-radius: 10%;
+        font-weight: 700;
+        position: absolute;
+        z-index: 100;
+        line-height: 1.5;
+        width: 45%;
+        padding: 1rem;
+        color: $game-input-color;
+    }
+
 // Game board
     #game-board {
         @include text-styles;
@@ -167,5 +182,4 @@ main {
             color: $wheel-border-4;
         }
     }
-
 }
